--- a/BrowserExtensions/chrome/manifest.json
+++ b/BrowserExtensions/chrome/manifest.json
@@ -1,38 +1,51 @@
 {
     "manifest_version": 2,
-    
+
     "name": "BeardedSpice",
     "description": "This extension allow you to use BeardedSpice for controlling media players on appropriate sites.",
     "version": "${BS_CHROME_EXTENSION_VERSION}",
     "homepage_url": "https://github.com/beardedspice/beardedspice",
-    
-    "icons": {
+
+    "icons":
+    {
         "16": "icon/Icon-16.png",
         "32": "icon/Icon-32.png",
         "64": "icon/Icon-64.png",
         "128": "icon/Icon-128.png"
     },
-    
-    "content_scripts": [
-                        {
-                        "matches": ["<all_urls>"],
-                        "run_at": "document_start",
-                        "js": ["shared/utils.js", "shared/init.js", "shared/eventClient.js"]
-                        },
-                        {
-                        "matches": ["<all_urls>"],
-                        "run_at": "document_end",
-                        "js": ["shared/main.js"]
-                        }
 
-                        ],
+    "content_scripts": [
+        {
+            "matches": ["<all_urls>"],
+            "run_at": "document_start",
+            "js": ["shared/utils.js"]
+        },
+        {
+            "matches": ["<all_urls>"],
+            "run_at": "document_end",
+            "js": [ "shared/init.js", "shared/eventClient.js", "shared/content.js"]
+        }
+
+    ],
+    "background":
+    {
+        "page": "shared/main.html",
+        "persistent": true
+    },
     "permissions": [
-                    "tabs",
-                    "<all_urls>",
-                    "activeTab",
-                    "storage"
-                    ],
-    "options_ui": {
+        "tabs",
+        "<all_urls>",
+        "activeTab",
+        "storage",
+        "unlimitedStorage",
+        "wss://localhost:*/*"
+    ],
+    "web_accessible_resources": [
+        "shared/*eventsController.js",
+        "/shared/utils.js"
+    ],
+    "options_ui":
+    {
         "page": "options.html",
         "chrome_style": true
     }
