--- a/BeardedSpice/MediaStrategies/versions.plist
+++ b/BeardedSpice/MediaStrategies/versions.plist
@@ -199,7 +199,9 @@
 	<key>YandexRadio</key>
 	<integer>2</integer>
 	<key>Youtube</key>
-	<integer>3</integer>
+	<integer>4</integer>
+	<key>YoutubeMusic</key>
+	<integer>1</integer>
 	<key>Zing</key>
 	<integer>1</integer>
 	<key>Zvooq</key>
