--- a/BeardedSpiceControllers/Info.plist
+++ b/BeardedSpiceControllers/Info.plist
@@ -17,11 +17,11 @@
 	<key>CFBundlePackageType</key>
 	<string>XPC!</string>
 	<key>CFBundleShortVersionString</key>
-	<string>1.0</string>
+	<string>$(BS_VERSION)</string>
 	<key>CFBundleSignature</key>
 	<string>????</string>
 	<key>CFBundleVersion</key>
-	<string>1</string>
+	<string>$(BS_BUILD)</string>
 	<key>NSHumanReadableCopyright</key>
 	<string>Copyright © 2016 BeardedSpice. All rights reserved.</string>
 	<key>XPCService</key>
