--- a/Config.xcconfig
+++ b/Config.xcconfig
@@ -6,6 +6,15 @@
 //  Copyright © 2016 BeardedSpice. All rights reserved.
 //
 
+BS_VERSION = 3.0.0
+BS_BUILD = 40
+
+BS_BUNDLE_ID                    = com.beardedspice.BeardedSpice
+BS_CONTROLLER_BUNDLE_ID         = $(BS_BUNDLE_ID).controllers
+BS_SAFARI_EXTENSION_BUNDLE_ID   = $(BS_BUNDLE_ID).safari.extension
+
+BS_GROUP = $(TeamIdentifierPrefix)com.beardedspice
+
 //File extension for javascript `strategy` file.
 BS_STRATEGY_EXTENSION = bsstrategy
 
@@ -28,5 +37,5 @@ BS_CHROME_EXTENSION_VERSION = 1.0.0 //version
 
 
 // Macro definition
-PREPROCESSOR_DEFINITIONS = BS_STRATEGY_EXTENSION=@\"$(BS_STRATEGY_EXTENSION)\" BS_SAFARI_EXTENSION_VERSION=@\"$(BS_SAFARI_EXTENSION_VERSION)\"
+PREPROCESSOR_DEFINITIONS = $(inherited) JSC_OBJC_API_ENABLED=1 BS_BUNDLE_ID=@\"$(BS_BUNDLE_ID)\" BS_CONTROLLER_BUNDLE_ID=@\"$(BS_CONTROLLER_BUNDLE_ID)\" BS_SAFARI_EXTENSION_BUNDLE_ID=@\"$(BS_SAFARI_EXTENSION_BUNDLE_ID)\" BS_STRATEGY_EXTENSION=@\"$(BS_STRATEGY_EXTENSION)\" BS_GROUP=@\"$(BS_GROUP)\"
 GCC_PREPROCESSOR_DEFINITIONS = $(PREPROCESSOR_DEFINITIONS)
