--- a/BeardedSpice/MediaStrategies/versions.plist
+++ b/BeardedSpice/MediaStrategies/versions.plist
@@ -198,9 +198,9 @@
 	<integer>2</integer>
 	<key>YandexRadio</key>
 	<integer>2</integer>
-	<key>Youtube</key>
+	<key>YouTube</key>
 	<integer>4</integer>
-	<key>YoutubeMusic</key>
+	<key>YouTubeMusic</key>
 	<integer>1</integer>
 	<key>Zing</key>
 	<integer>1</integer>
