--- a/BeardedSpice/MediaStrategies/versions.plist
+++ b/BeardedSpice/MediaStrategies/versions.plist
@@ -128,6 +128,8 @@
 	<integer>1</integer>
 	<key>PhishTracks</key>
 	<integer>1</integer>
+	<key>Player FM</key>
+	<integer>1</integer>
 	<key>PlexWeb</key>
 	<integer>3</integer>
 	<key>PocketCasts</key>
