Added WFUV media strategy

--- a/BeardedSpice/MediaStrategies/versions.plist
+++ b/BeardedSpice/MediaStrategies/versions.plist
@@ -188,6 +188,8 @@
 	<integer>3</integer>
 	<key>WatchaPlay</key>
 	<integer>1</integer>
+	<key>WFUV</key>
+	<integer>1</integer>
 	<key>WonderFm</key>
 	<integer>2</integer>
 	<key>XboxMusic</key>
