needs for applescript access to others apps

--- a/BeardedSpice/BeardedSpice-Info.plist
+++ b/BeardedSpice/BeardedSpice-Info.plist
@@ -67,6 +67,8 @@
 		<key>NSAllowsArbitraryLoads</key>
 		<true/>
 	</dict>
+	<key>NSAppleEventsUsageDescription</key>
+	<string>We need this access for getting information about current track and playback control.</string>
 	<key>NSAppleScriptEnabled</key>
 	<true/>
 	<key>NSHumanReadableCopyright</key>
