fixed bugs and refactoring

--- a/Config.xcconfig
+++ b/Config.xcconfig
@@ -6,14 +6,16 @@
 //  Copyright © 2016 BeardedSpice. All rights reserved.
 //
 
-BS_VERSION = 3.0.0
-BS_BUILD = 40
+BS_VERSION = 3.0.1
+BS_BUILD = 41
 
 BS_BUNDLE_ID                    = com.beardedspice.BeardedSpice
 BS_CONTROLLER_BUNDLE_ID         = $(BS_BUNDLE_ID).controllers
 BS_SAFARI_EXTENSION_BUNDLE_ID   = $(BS_BUNDLE_ID).safari.extension
 
-BS_GROUP = $(TeamIdentifierPrefix)com.beardedspice
+BS_DEFAULT_SAFARI_BUBDLE_ID     = com.apple.Safari
+
+BS_GROUP = $(DEVELOPMENT_TEAM).com.beardedspice
 
 //File extension for javascript `strategy` file.
 BS_STRATEGY_EXTENSION = bsstrategy
@@ -37,5 +39,5 @@ BS_CHROME_EXTENSION_VERSION = 1.0.0 //version
 
 
 // Macro definition
-PREPROCESSOR_DEFINITIONS = $(inherited) JSC_OBJC_API_ENABLED=1 BS_BUNDLE_ID=@\"$(BS_BUNDLE_ID)\" BS_CONTROLLER_BUNDLE_ID=@\"$(BS_CONTROLLER_BUNDLE_ID)\" BS_SAFARI_EXTENSION_BUNDLE_ID=@\"$(BS_SAFARI_EXTENSION_BUNDLE_ID)\" BS_STRATEGY_EXTENSION=@\"$(BS_STRATEGY_EXTENSION)\" BS_GROUP=@\"$(BS_GROUP)\"
+PREPROCESSOR_DEFINITIONS = $(inherited) JSC_OBJC_API_ENABLED=1 BS_BUNDLE_ID=@\"$(BS_BUNDLE_ID)\" BS_CONTROLLER_BUNDLE_ID=@\"$(BS_CONTROLLER_BUNDLE_ID)\" BS_SAFARI_EXTENSION_BUNDLE_ID=@\"$(BS_SAFARI_EXTENSION_BUNDLE_ID)\" BS_STRATEGY_EXTENSION=@\"$(BS_STRATEGY_EXTENSION)\" BS_GROUP=@\"$(BS_GROUP)\" BS_DEFAULT_SAFARI_BUBDLE_ID=@\"$(BS_DEFAULT_SAFARI_BUBDLE_ID)\"
 GCC_PREPROCESSOR_DEFINITIONS = $(PREPROCESSOR_DEFINITIONS)
