--- a/Debug-Config.xcconfig
+++ b/Debug-Config.xcconfig
@@ -10,10 +10,9 @@
 // then BeardedSpice uses strategies only from bundle resources folder.
 DEBUG_STRATEGY = 0
 
-
 #include "./Config.xcconfig"
 
 // Macro definition
 
-GCC_PREPROCESSOR_DEFINITIONS = DEBUG_STRATEGY=$(DEBUG_STRATEGY) $(PREPROCESSOR_DEFINITIONS)
+GCC_PREPROCESSOR_DEFINITIONS = DEBUG DEBUG_STRATEGY=$(DEBUG_STRATEGY) $(PREPROCESSOR_DEFINITIONS)
 
