--- a/Config.xcconfig
+++ b/Config.xcconfig
@@ -9,35 +9,27 @@
 BS_VERSION = 3.0.1
 BS_BUILD = 41
 
-BS_BUNDLE_ID                    = com.beardedspice.BeardedSpice
-BS_CONTROLLER_BUNDLE_ID         = $(BS_BUNDLE_ID).controllers
-BS_SAFARI_EXTENSION_BUNDLE_ID   = $(BS_BUNDLE_ID).safari.extension
-
-BS_DEFAULT_SAFARI_BUBDLE_ID     = com.apple.Safari
+BS_DEVELOPER_ID = DEV_ID
 
 BS_GROUP = $(DEVELOPMENT_TEAM).com.beardedspice
+
+
+BS_BUNDLE_ID                    = com.beardedspice.BeardedSpice
+BS_CONTROLLER_BUNDLE_ID         = $(BS_BUNDLE_ID).controllers
+
+BS_SAFARI_EXTENSION_BUNDLE_ID   = $(BS_BUNDLE_ID).safari.extension
 
 //File extension for javascript `strategy` file.
 BS_STRATEGY_EXTENSION = bsstrategy
 
-// Path to folder which contains certificates and other user sensitive info for signing Safari extension.
-// This folder must contain files (to see description in ../Scripts/extension-dev-tools/safari/README.md):
-//      AppleIncRootCertificate.cer
-//      AppleWWDRCA.cer
-//      key.pem
-//      safari_extension.cer
-//      developer_id.txt - file contains developer id for key in Info.plist
-BS_SAFARI_EXTENSION_CERTS = $(HOME)/Library/Keychains/SafariBuildExtensionCerts
-BS_SAFARI_DEVELOPER_ID = DEVID //correct value will be defined later from developer_id.txt
 
-// Actual version of the Safari extension. Used for checking extensions updates.
-BS_SAFARI_EXTENSION_VERSION = 1.0.0 //CFBundleShortVersionString
-BS_SAFARI_EXTENSION_BUILD = 1 //CFBundleVersion
+BS_DEFAULT_SAFARI_BUBDLE_ID     = com.apple.Safari
+BS_SAFARI_TECHPREVIEW_ID        = com.apple.SafariTechnologyPreview
 
 // Actual version of the Google Chrome extension. Used for checking extensions updates.
 BS_CHROME_EXTENSION_VERSION = 1.0.0 //version
 
 
 // Macro definition
-PREPROCESSOR_DEFINITIONS = $(inherited) JSC_OBJC_API_ENABLED=1 BS_BUNDLE_ID=@\"$(BS_BUNDLE_ID)\" BS_CONTROLLER_BUNDLE_ID=@\"$(BS_CONTROLLER_BUNDLE_ID)\" BS_SAFARI_EXTENSION_BUNDLE_ID=@\"$(BS_SAFARI_EXTENSION_BUNDLE_ID)\" BS_STRATEGY_EXTENSION=@\"$(BS_STRATEGY_EXTENSION)\" BS_GROUP=@\"$(BS_GROUP)\" BS_DEFAULT_SAFARI_BUBDLE_ID=@\"$(BS_DEFAULT_SAFARI_BUBDLE_ID)\"
+PREPROCESSOR_DEFINITIONS = $(inherited) JSC_OBJC_API_ENABLED=1 BS_BUNDLE_ID=@\"$(BS_BUNDLE_ID)\" BS_CONTROLLER_BUNDLE_ID=@\"$(BS_CONTROLLER_BUNDLE_ID)\" BS_SAFARI_EXTENSION_BUNDLE_ID=@\"$(BS_SAFARI_EXTENSION_BUNDLE_ID)\" BS_STRATEGY_EXTENSION=@\"$(BS_STRATEGY_EXTENSION)\" BS_GROUP=@\"$(BS_GROUP)\" BS_DEFAULT_SAFARI_BUBDLE_ID=@\"$(BS_DEFAULT_SAFARI_BUBDLE_ID)\" BS_SAFARI_TECHPREVIEW_ID=@\"$(BS_SAFARI_TECHPREVIEW_ID)\"
 GCC_PREPROCESSOR_DEFINITIONS = $(PREPROCESSOR_DEFINITIONS)
