--- a/BeardedSpice/Beardie-Info.plist
+++ b/BeardedSpice/Beardie-Info.plist
@@ -72,7 +72,7 @@
 	<key>NSAppleScriptEnabled</key>
 	<true/>
 	<key>NSHumanReadableCopyright</key>
-	<string>Copyright © 2015 BeardedSpice. All rights reserved.</string>
+	<string>$(BS_COPYRIGHT)</string>
 	<key>NSMainNibFile</key>
 	<string>MainMenu</string>
 	<key>NSPrincipalClass</key>
