--- a/Config.xcconfig
+++ b/Config.xcconfig
@@ -6,6 +6,7 @@
 //  Copyright © 2016  GPL v3 http://www.gnu.org/licenses/gpl.html
 //
 
+BS_NAME = Beardie
 BS_COPYRIGHT = Copyright © 2019 Beardie. All rights reserved.
 BS_VERSION = 3.0.2
 BS_BUILD = 51
@@ -30,5 +31,5 @@ BS_CHROME_EXTENSION_VERSION = 1.0.0 //version
 
 
 // Macro definition
-PREPROCESSOR_DEFINITIONS = $(inherited) JSC_OBJC_API_ENABLED=1 BS_BUNDLE_ID=@\"$(BS_BUNDLE_ID)\" BS_CONTROLLER_BUNDLE_ID=@\"$(BS_CONTROLLER_BUNDLE_ID)\" BS_SAFARI_EXTENSION_BUNDLE_ID=@\"$(BS_SAFARI_EXTENSION_BUNDLE_ID)\" BS_STRATEGY_EXTENSION=@\"$(BS_STRATEGY_EXTENSION)\" BS_GROUP=@\"$(BS_GROUP)\" BS_DEFAULT_SAFARI_BUBDLE_ID=@\"$(BS_DEFAULT_SAFARI_BUBDLE_ID)\" BS_SAFARI_TECHPREVIEW_ID=@\"$(BS_SAFARI_TECHPREVIEW_ID)\"
+PREPROCESSOR_DEFINITIONS = $(inherited) JSC_OBJC_API_ENABLED=1 BS_BUNDLE_ID=@\"$(BS_BUNDLE_ID)\" BS_CONTROLLER_BUNDLE_ID=@\"$(BS_CONTROLLER_BUNDLE_ID)\" BS_SAFARI_EXTENSION_BUNDLE_ID=@\"$(BS_SAFARI_EXTENSION_BUNDLE_ID)\" BS_STRATEGY_EXTENSION=@\"$(BS_STRATEGY_EXTENSION)\" BS_GROUP=@\"$(BS_GROUP)\" BS_DEFAULT_SAFARI_BUBDLE_ID=@\"$(BS_DEFAULT_SAFARI_BUBDLE_ID)\" BS_SAFARI_TECHPREVIEW_ID=@\"$(BS_SAFARI_TECHPREVIEW_ID)\" BS_NAME=@\"$(BS_NAME)\"
 GCC_PREPROCESSOR_DEFINITIONS = $(PREPROCESSOR_DEFINITIONS)
