--- a/Config.xcconfig
+++ b/Config.xcconfig
@@ -16,6 +16,7 @@ BS_GROUP = $(DEVELOPMENT_TEAM).com.calm-apps.mac.beardie
 
 BS_BUNDLE_ID                    = com.calm-apps.mac.beardie
 BS_CONTROLLER_BUNDLE_ID         = $(BS_BUNDLE_ID).controllers
+BS_NATIVE_MESSAGING_CONNECTOR   = $(BS_BUNDLE_ID).nm.connector
 
 BS_SAFARI_EXTENSION_BUNDLE_ID   = $(BS_BUNDLE_ID).safari.extension
 
