Native messaging on Chrome extension. Modified certificate template for supporting new security approuch of the Chrome.

--- a/Scripts/GenerateCertTemplate/openssl.conf
+++ b/Scripts/GenerateCertTemplate/openssl.conf
@@ -15,3 +15,7 @@ C=US
 [req_x509v3_extensions]
 keyUsage=critical,digitalSignature
 extendedKeyUsage=critical,clientAuth,serverAuth
+subjectAltName = @alt_names
+
+[alt_names]
+DNS.1 = localhost
