--- a/BeardedSpice/Beardie-Info.plist
+++ b/BeardedSpice/Beardie-Info.plist
@@ -58,6 +58,8 @@
 	<string>????</string>
 	<key>CFBundleVersion</key>
 	<string>$(BS_BUILD)</string>
+	<key>LSApplicationCategoryType</key>
+	<string>public.app-category.utilities</string>
 	<key>LSMinimumSystemVersion</key>
 	<string>${MACOSX_DEPLOYMENT_TARGET}</string>
 	<key>LSUIElement</key>
