Support NTS Radio
Add basic functionality for playing & pausing audio from NTS radio
(https://nts.live).

--- a/BeardedSpice/MediaStrategies/versions.plist
+++ b/BeardedSpice/MediaStrategies/versions.plist
@@ -116,6 +116,8 @@
 	<integer>1</integer>
 	<key>NRK</key>
 	<integer>1</integer>
+	<key>NTS Radio</key>
+	<integer>1</integer>
 	<key>Odnoklassniki</key>
 	<integer>1</integer>
 	<key>Overcast</key>
