--- a/BrowserExtensions/chrome/manifest.json
+++ b/BrowserExtensions/chrome/manifest.json
@@ -4,7 +4,7 @@
     "name": "Beardie",
     "short_name": "Beardie",
     "description": "This is companion extension for Beardie App. Extension allow you to use Beardie for controlling media players on appropriate sites.",
-    "version": "${BS_VERSION}.${BS_BUILD}",
+    "version": "${BS_BUILD}",
     "homepage_url": "${BS_HOMEPAGE}",
 
     "icons":
