--- a/Config.xcconfig
+++ b/Config.xcconfig
@@ -8,14 +8,19 @@
 
 #include "./.devconfig.xcconfig"
 
+//BS_ prefix vars are appeared in ConfigConstants.h
+//BS_B_ prefix vars are appeared in constans.js
+
 XC_PREFIX_FOR_CONSTANTS = BS_
-XC_CONSTANT_HEADER_FILE = $(SRCROOT)/ConfigConstants.h
+XC_CONSTANT_HEADER_FILE = $(OBJROOT)/ConfigConstants.h
+XC_PREFIX_FOR_BROWSER_CONSTANTS = BS_B_
+XC_CONSTANT_JS_FILE = $(OBJROOT)/constants.js
 XC_SPL = /
 
 BS_NAME = Beardie
-BS_COPYRIGHT = Copyright © 2020 Beardie. All rights reserved.
+BS_COPYRIGHT = Copyright © 2021 Beardie. All rights reserved.
 BS_VERSION = 3.0.6 alpha
-BS_BUILD = 65
+BS_BUILD = 66
 BS_HOMEPAGE = https:$(XC_SPL)/github.com/Stillness-2/beardie
 BS_UNSUPPORTED_STRATEGY_REPO_URL = https:$(XC_SPL)/github.com/beardedspice/BS-Strategies
 
@@ -27,17 +32,19 @@ BS_CONTROLLER_BUNDLE_ID                     = $(BS_BUNDLE_ID).controllers
 BS_LAUNCHER_BUNDLE_ID                       = $(BS_BUNDLE_ID).launcher
 
 BS_GROUP                                    = $(DEVELOPMENT_TEAM).$(BS_BUNDLE_ID)
+BS_B_BUID_CONFIG                            = $(CONFIGURATION)
+
 
 BS_RESTARTER_NAME                           = beardie_restarter
 BS_RESTARTER_BUNDLE_ID                      = $(BS_BUNDLE_ID).restarter
 
 BS_NATIVE_MESSAGING_CONNECTOR_NAME          = beardie-nm-connector
-BS_NATIVE_MESSAGING_CONNECTOR_BUNDLE_ID     = com.calm_apps.mac.beardie.nm.connector
+BS_B_NATIVE_MESSAGING_CONNECTOR_BUNDLE_ID     = com.calm_apps.mac.beardie.nm.connector
 
 BS_SAFARI_EXTENSION_BUNDLE_ID               = $(BS_BUNDLE_ID).safari.extension
 BS_CHROME_EXTENSION_ID                      = kcbddjdbhggfejihipchloknandfnkgb
 
-BS_CHROME_EXTENSION_ID_DEV                  = kfecbffboepnaccakdfaionjkemmmljp
+BS_CHROME_EXTENSION_ID_DEV                  = mlcefphhofkpnocoljknhhjdkjoccbjc
 
 //File extension for javascript `strategy` file.
 BS_STRATEGY_EXTENSION                       = bsstrategy
@@ -54,6 +61,11 @@ BS_SAFARI_TECHPREVIEW_ID                    = com.apple.SafariTechnologyPreview
 BS_DEFAULT_CHROME_BUNDLE_ID                 = com.google.Chrome
 
  
+HEADER_SEARCH_PATHS = $(inherited) $(OBJROOT)
+
+BEARDIE_LOCAL_BUILD_DIR = $(SRCROOT)/build/${CONFIGURATION}
+EXTENSIONS_BUILD = $(BEARDIE_LOCAL_BUILD_DIR)/extensions
+
 // Macro definition
 PREPROCESSOR_DEFINITIONS = $(inherited) JSC_OBJC_API_ENABLED=1
 GCC_PREPROCESSOR_DEFINITIONS = $(PREPROCESSOR_DEFINITIONS)
